[gd_scene load_steps=41 format=3 uid="uid://cf23cht88wint"]

[ext_resource type="Script" path="res://Scripturi/copac.gd" id="1_vugtq"]
[ext_resource type="Texture2D" uid="uid://eqaa0s5xh53y" path="res://Sprout Lands - Sprites - Basic pack/Sprout Lands - Sprites - premium pack/Objects/Tree animations/tree_appel_sprites.png" id="2_0r0is"]
[ext_resource type="Texture2D" uid="uid://dn0148vl3vlrt" path="res://Sprout Lands - Sprites - Basic pack/Sprout Lands - Sprites - premium pack/Objects/Tree animations/tree_fall_animation_sprite_sheet.png" id="2_l63qx"]
[ext_resource type="Texture2D" uid="uid://omnlx5l4b75c" path="res://Sprout Lands - Sprites - Basic pack/Sprout Lands - Sprites - premium pack/Objects/Tree animations/tree_sprites.png" id="3_b3537"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_7c4t3"]
blend_mode = 1

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_e6vai"]
polygon = PackedVector2Array(-1, 15, -1, 14, -4, 14, -4, 13, -5, 13, -5, 12, -3, 12, -3, 8, -7, 8, -7, 7, -9, 7, -9, 6, -10, 6, -10, 5, -11, 5, -11, 3, -12, 3, -12, -1, -11, -1, -11, -3, -12, -3, -12, -8, -11, -8, -11, -10, -10, -10, -10, -11, -9, -11, -9, -12, -8, -12, -8, -13, -6, -13, -6, -14, -4, -14, -4, -15, 5, -15, 5, -14, 6, -14, 6, -13, 8, -13, 8, -12, 9, -12, 9, -11, 10, -11, 10, -10, 11, -10, 11, -8, 12, -8, 12, -5, 11, -5, 11, -3, 12, -3, 12, 2, 11, 2, 11, 4, 11, 4, 11, 5, 10, 5, 10, 6, 9, 6, 9, 7, 6, 7, 6, 8, 3, 8, 3, 12, 5, 12, 5, 13, 4, 13, 4, 14, 1, 14, 1, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_obn1n"]
atlas = ExtResource("2_0r0is")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7psiq"]
atlas = ExtResource("2_0r0is")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xye26"]
atlas = ExtResource("2_0r0is")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eah0"]
atlas = ExtResource("2_0r0is")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5prh"]
atlas = ExtResource("2_l63qx")
region = Rect2(0, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dkt8"]
atlas = ExtResource("2_l63qx")
region = Rect2(64, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_32xpo"]
atlas = ExtResource("2_l63qx")
region = Rect2(128, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ae41p"]
atlas = ExtResource("2_l63qx")
region = Rect2(192, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6huq"]
atlas = ExtResource("2_l63qx")
region = Rect2(256, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nuqx"]
atlas = ExtResource("2_l63qx")
region = Rect2(320, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eb1tw"]
atlas = ExtResource("2_l63qx")
region = Rect2(384, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmohu"]
atlas = ExtResource("2_l63qx")
region = Rect2(448, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4hv2"]
atlas = ExtResource("2_l63qx")
region = Rect2(512, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5h3jn"]
atlas = ExtResource("2_l63qx")
region = Rect2(576, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwe5t"]
atlas = ExtResource("2_l63qx")
region = Rect2(640, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yymjb"]
atlas = ExtResource("2_l63qx")
region = Rect2(704, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd03g"]
atlas = ExtResource("2_l63qx")
region = Rect2(768, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_itt8t"]
atlas = ExtResource("3_b3537")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qom0r"]
atlas = ExtResource("3_b3537")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bihck"]
atlas = ExtResource("3_b3537")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_btybh"]
atlas = ExtResource("3_b3537")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_374dd"]
atlas = ExtResource("2_0r0is")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_00ime"]
atlas = ExtResource("2_0r0is")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bchv2"]
atlas = ExtResource("2_0r0is")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6p7qj"]
atlas = ExtResource("2_0r0is")
region = Rect2(96, 96, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_14181"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_obn1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7psiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xye26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eah0")
}],
"loop": true,
"name": &"fructe",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5prh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dkt8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32xpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ae41p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6huq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nuqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eb1tw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmohu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4hv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h3jn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwe5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yymjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd03g")
}],
"loop": true,
"name": &"gata",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_itt8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qom0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bihck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btybh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itt8t")
}],
"loop": true,
"name": &"taiere",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_374dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00ime")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bchv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6p7qj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_374dd")
}],
"loop": true,
"name": &"taiere-fructe",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_37kjx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"taiere"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../coroana:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_lqdc7"]
resource_name = "fructe"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("SpriteFrames_14181"), SubResource("SpriteFrames_14181")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"fructe", &"fructe"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../coroana:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, false, false, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../trunchi:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, false, false, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../../coroana:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -3.5), Vector2(0, -3.5)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../trunchi:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 15), Vector2(0, 15)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../..:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(8, 0), Vector2(8, 0)]
}

[sub_resource type="Animation" id="Animation_mx5fc"]
resource_name = "gata"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("SpriteFrames_14181"), SubResource("SpriteFrames_14181")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"gata", &"gata"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.466667, 0.533333, 0.6, 0.666667, 0.733333, 0.8, 0.866667, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../trunchi:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../coroana:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../../coroana:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -3.5), Vector2(0, -3.5)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../trunchi:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 15), Vector2(0, 15)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_5565h"]
resource_name = "taiere"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("SpriteFrames_14181"), SubResource("SpriteFrames_14181")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"taiere", &"taiere"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../coroana:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, false, false, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../trunchi:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, false, false, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../../coroana:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -3.5), Vector2(0, -3.5)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../trunchi:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 15), Vector2(0, 15)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../..:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(8, 0), Vector2(8, 0)]
}

[sub_resource type="Animation" id="Animation_jb6vp"]
resource_name = "taiere-fructe"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("SpriteFrames_14181"), SubResource("SpriteFrames_14181")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"taiere-fructe", &"taiere-fructe"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../coroana:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, false, false, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../trunchi:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, false, false, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../../coroana:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -3.5), Vector2(0, -3.5)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../trunchi:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 15), Vector2(0, 15)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../..:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(8, 0), Vector2(8, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uvfcm"]
_data = {
"RESET": SubResource("Animation_37kjx"),
"fructe": SubResource("Animation_lqdc7"),
"gata": SubResource("Animation_mx5fc"),
"taiere": SubResource("Animation_5565h"),
"taiere-fructe": SubResource("Animation_jb6vp")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sqr2n"]
size = Vector2(8, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n5mj1"]
size = Vector2(24, 23)

[node name="Area2D" type="Area2D"]
script = ExtResource("1_vugtq")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
material = SubResource("CanvasItemMaterial_7c4t3")
occluder = SubResource("OccluderPolygon2D_e6vai")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -4)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="StaticBody2D"]
position = Vector2(8, 0)
sprite_frames = SubResource("SpriteFrames_14181")
animation = &"taiere"
offset = Vector2(-8, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="StaticBody2D"]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_uvfcm")
}

[node name="trunchi" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 15)
shape = SubResource("RectangleShape2D_sqr2n")

[node name="Area2D" type="Area2D" parent="StaticBody2D"]
position = Vector2(0, 15)

[node name="trunchi" type="CollisionShape2D" parent="StaticBody2D/Area2D"]
shape = SubResource("RectangleShape2D_sqr2n")

[node name="coroana" type="CollisionShape2D" parent="."]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_n5mj1")

[node name="Respawn_tree" type="Timer" parent="."]
wait_time = 5.0

[node name="Respawn_fruits" type="Timer" parent="."]
wait_time = 20.0

[connection signal="area_entered" from="StaticBody2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Respawn_tree" to="." method="_on_respawn_tree_timeout"]
[connection signal="timeout" from="Respawn_fruits" to="." method="_on_respawn_fruits_timeout"]
